frontend/test/should_fail/computations_return_termination_002.grg
var ::glob:int;

two() : int
{
	if(::glob==42) {
	} else {
		return(1);
	}
}

